--- a/css/theme-precice.css
+++ b/css/theme-precice.css
@@ -55,7 +55,6 @@ light blue: #ECF7FE
 .summary {
     color: #808080;
     border-left: 5px solid #ED762C;
-    font-size:16px;
 }
 
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
